--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -103,6 +103,7 @@ jobs:
           -e TEST_SITE_ADMIN_EMAIL
           -e TEST_SITE_ADMIN_USERNAME
           -e TEST_SITE_ADMIN_PASSWORD
+          -e TEST_SITE_DB_DSN
           ${{env.plugin-slug}}_wordpress_1 bash
           -c './vendor/bin/codecept run acceptance --fail-fast --debug'
         env:
@@ -118,6 +119,7 @@ jobs:
           TEST_SITE_ADMIN_EMAIL: example@example.com
           TEST_SITE_ADMIN_USERNAME: admin
           TEST_SITE_ADMIN_PASSWORD: admin
+          TEST_SITE_DB_DSN: mysql:host=%TEST_SITE_DB_HOST%;dbname=%TEST_SITE_DB_NAME%'
 
       - name: Upload artifact
         if: failure()
