--- a/codeception.dist.yml
+++ b/codeception.dist.yml
@@ -18,3 +18,5 @@ extensions:
         - Codeception\Command\GenerateWPXMLRPC
 params:
     - .env.testing
+settings:
+    error_level: E_ALL & ~E_STRICT & ~E_DEPRECATED & ~E_WARNING
